DuPont DevSB/src/objects/Test_Result__c.object
<CustomObject>
    <description>Test result of scenario</description>
    <fields>
        <fullName>Business_Sign_off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the business has accepted the Test Results, this box should be checked.</description>
        <inlineHelpText>If the business has accepted the Test Results, this box should be checked.</inlineHelpText>
        <label>Business Sign-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <description>Expected result of scenario</description>
        <inlineHelpText>If you leave blank, the Expected Results from the Test Scenario will be copied into this field on Save.  You can then edit and add additional information.</inlineHelpText>
        <label>Expected Result</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#A845DC</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                    <color>#009900</color>
                    <label>Pass</label>
                </value>
                <value>
                    <fullName>Fail</fullName>
                    <color>#FF0000</color>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>Waiting for Retest</fullName>
                    <color>#FFFF66</color>
                    <label>Waiting for Retest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <description>Provide a list of the Data needed to perform this test.  If needed, attach or provide links to the documentation.</description>
        <inlineHelpText>Provide a list of the Data needed to perform this test.  If needed, attach or provide links to the documentation.</inlineHelpText>
        <label>Test Data</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Result_ID__c</fullName>
        <description>Test Result ID</description>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Test Result ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <description>This includes current records but could include workflows</description>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Record Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fail_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Status__c   , &quot;Other&quot;)</errorConditionFormula>
        <errorMessage>If test result equals fail, comments need to be input</errorMessage>
    </validationRules>
</CustomObject>